kustomize/overlays/production/search/title-translation/deployment_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: title-translation
  labels:
    app: title-translation
    stage: production
  annotations:
    kube-score/ignore: pod-probes,deployment-has-host-podantiaffinity
spec:
  selector:
    matchLabels:
      app: title-translation
      stage: production
  template:
    metadata:
      annotations:
        iam.amazonaws.com/role: arn:aws:iam::045675425505:role/pixtavietnam-production
      labels:
        app: title-translation
        stage: production
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: eks.amazonaws.com/capacityType
                    operator: In
                    values:
                      - ON_DEMAND
              weight: 10
      containers:
        - name: title-translation-nodejs
          image: 045675425505.dkr.ecr.ap-northeast-1.amazonaws.com/pixta-title-translation:production
