kustomize/overlays/production/search/title-translation/service_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: title-translation-svc
spec:
  selector:
    app: title-translation
    stage: production
