kustomize/overlays/production/search/title-translation/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: title-translation-ingress-internal
  annotations:
    kubernetes.io/ingress.class: nginx-internal
spec:
  rules:
    - host: title-translation-service.pixtastock.com
      http:
        paths:
          - backend:
              serviceName: title-translation-svc
              servicePort: 80
